# PyRetry

./: .gitignore  LICENSE  README.md  publish.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/retry/: __init__.py  api.py  compat.py
tests/: test_retry.py
