[tool.poetry]
name = "py-retry"
version = "0.0.5"
description = "A nice tool for retrying tasks when they are failed."
authors = ["Abeautifulsnow"]
license = "MIT License"
packages = [
    { include = "retry", from = "src" },
]
readme = "README.md"
repository = "https://github.com/Abeautifulsnow/PyRetry"
keywords = ["pyretry", "retry", "python", "python3"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
mock = "^4.0.3"
pytest = "^6.2.5"
poetry-core = "^1.0.7"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
