[metadata]
name = pyretry
version = 0.0.1
author = runstone
author_email = lnrunstone.0727@gmail.com
description = A nice decorator tool for retrying tasks when they failed.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Abeautifulsnow/PyRetry
project_urls =
    Bug Tracker = https://github.com/Abeautifulsnow/PyRetry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src